[package]
name = "franchise-stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.21.2"
clap = { version = "4.3.8", features = ["derive"] }
serde = {version = "1.0.164", features = ["derive"]}
serde_json = "1.0.99"
